--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,35 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
+
+.signature {
+  font-family: 'Dancing Script', cursive;
+  font-size: 4rem; /* Adjust the size as needed */
+  color: var(--tw-color-primary); /* Use Tailwind's primary color */
+  display: none;
+}
+
+@media (min-width: 768px) { 
+  .signature {
+    display: block; 
+  }
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.animate-fadeIn {
+  animation: fadeIn 0.6s ease-out;
+}
+
 body {
   font-family: "Poppins" sans-serif;
 }
